assets/styles/main.css
@keyframes infinite-rotation {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}

:root {
  --safe-width: 1280px;

  --Iridium: rgba(61, 61, 61, 1);
  --Baltic-Sea: rgba(41, 41, 41, 1);
  --white: rgba(255, 255, 255, 1);
  --safron-mango: rgba(255, 196, 83, 1);
  --aqua-green: rgba(41, 228, 137, 1);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html {
  font-family: "Inter", sans-serif;
}

body {
  background-color: var(--Baltic-Sea);
 
}

.p-16 {
  padding: 16px;
}
.py-16 {
  padding: 16px 0;
}
.px-16 {
  padding: 0 16px;
}

.w-full {
  width: 100%;
}

.h-full {
  height: 100%;
}

.gap-6 {
  gap: 6px;
}

.rgap-6 {
  row-gap: 6px;
}

.rgap-16 {
  row-gap: 16px;
}

.flex {
  display: flex;
}

.justify-between {
  justify-content: space-between;
}

.column {
  flex-direction: column;
}

.column-r {
  flex-direction: column-reverse;
}

.items-center {
  align-items: center;
}

.grid {
  display: grid;
}

.container {
  width: 100%;
  margin: 0 auto;
}

h1 {
  font-size: 1.75rem;
  line-height: 36px;
}

main {
  display: grid;
    gap:16px;
  max-width: var(--safe-width);
  margin: 0 auto;
  padding:16px;
}

.container{
    display: flex;
    gap: 16px;
    flex-direction: column;
}

/* cards */

.card {
  background-color: var(--Iridium);
  color: var(--white);
  padding: 16px;
  border-radius: 16px;
  height: max-content;
}

.card .title {
  font-size: 1.5rem;
  line-height: 32px;
}

.card p.subtitle,
section span.subtitle {
  color: var(--white);
  opacity: 0.4;
  font-size: 12px;
  font-weight: 500;
}

/* button style */

button {
  background-color: transparent;
  color: var(--Baltic-Sea);
  font-size: 16px;
  border: none;
  outline: none;
  transition: 500ms;
  font-weight: 700;
  padding: 8px 16px;
  display: inline-block;
  text-align: center;
  border-radius: 4px;
}

button.active {
  background-color: var(--Baltic-Sea);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15), 0 0 2px rgba(0, 0, 0, 0.12);
  color: var(--white);
}

button:hover {
  background-color: var(--Baltic-Sea);
  color: var(--white);
}

/* date-card */

.date-card li:first-child {
  border-left: 2px solid var(--safron-mango);
}
.date-card li:last-child {
  border-left: 2px solid var(--aqua-green);
}

.date-card li {
  padding: 4px 12px;
}

li h3 {
  line-height: 22px;
  font-size: 16px;
}

/* email-card */

.email-card ul li {
  border-bottom: 1px solid var(--Baltic-Sea);
  padding: 7px 0;
  width: 100%;

}
.email-card ul li div:last-child {
  padding: 6px 12px;
  justify-content: flex-start;
  width: calc(100% - 40px);
  
}

.email-card ul li div h3 {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
    width: 100%;
}

/*  Quote Card */

.quote-card {
  row-gap: 29px;
}

.quote-card p {
  font-size: 20px;
  font-weight: 400;
  color: var(--white);
  opacity: 0.8;
  line-height: 32px;
}

.quote-card span {
  display: flex;
  justify-content: flex-end;
}

.quote-card p::before,
.quote-card p::after {
  content: '"';
}

/* feeling card */

.feeling-card {
    display: flex;
    gap:16px;
    flex-direction: column;
}

.feeling-cardContainer {
  display: flex;
  gap: 16px;
  flex-wrap: wrap;
}

.feeling-miniCards {
  flex-grow: 1;
  flex-basis: 30%;
  background-color: var(--Baltic-Sea);
  padding: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 8px;
}

/* doom-card */

.doom-card{
    display: none;
    
}

.doom-card img{
    width: 100%;
    object-fit: cover;
}

.doom-card ul {
    display: flex;
    padding-bottom: 16px;
    gap:10px;
}

.doom-bannerContainer{
    
    position: relative;
    display: flex;
    justify-content: center;
}

.doom-bannerContainer img{
    border-radius: 8px;
}

.doom-bannerContainer p{
position: absolute;
bottom: 16px;
padding: 16px;
background-color: rgba(0,0,0,0.4);
backdrop-filter: blur(24px);
width: calc(100% - 32px);
font-size: 20px;
font-weight: 200;
line-height: 26px;
border-radius: 8px;

}

.multirow-cards{
    display: grid;
    gap:16px;
  
}
/* misc */

#degree {
  font-size: 28px;
  line-height: 36px;
}

#sun {
  animation: infinite-rotation 20s infinite;
}


@media screen and (min-width: 768px) {

    main{
        display: flex;
        gap: 16px;
       
    }

    main .container:first-child{
        width: 32%;
    }

    .doom-card{
        display: block;
    }
    .multirow-cards{
        display: flex;
        gap:16px;
      
    }


    

}

